--- a/Client/wwwroot/index.html
+++ b/Client/wwwroot/index.html
@@ -13,7 +13,7 @@
 
 </head>
 
-<body style="background: linear-gradient(180deg, #AAED76 0%, #7BC75F 100%)">
+<body>
     <div id="app">
         <center>
             <img id="spinImage" src="img/suika_logo.png" style="position: absolute; bottom: 0; right: 0;">
